--- a/reference-app/app.html
+++ b/reference-app/app.html
@@ -4,19 +4,19 @@
     <head>
         <title>{{ config.appTitle }}</title>
         <script type="text/javascript">
-            window.$ = window.jQuery = require('../node_modules/jquery/dist/jquery.min.js');
+            window.$ = window.jQuery = require('./bower_components/jquery/dist/jquery.js');
         </script>
-        <link rel="stylesheet" href="../node_modules/font-awesome/css/font-awesome.min.css">
-        <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
-        <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap-theme.min.css">
-        <link rel="stylesheet" href="../node_modules/angular-resizable/angular-resizable.min.css">
-        <script src="../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+        <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.min.css">
+        <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
+        <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap-theme.min.css">
+        <link rel="stylesheet" href="bower_components/angular-resizable/angular-resizable.min.css">
+        <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
         <script type="text/javascript" src="bower_components/jquery/dist/jquery.js"></script>
         <script type="text/javascript" src="bower_components/jquery-ui/jquery-ui.js"></script>
         <script type="text/javascript" src="bower_components/jquery-ui/ui/widgets/slider.js"></script>
         <script type="text/javascript" src="bower_components/angular/angular.js"></script>
         <script type="text/javascript" src="bower_components/angular-ui-slider/src/slider.js"></script>
-        <script src="../node_modules/angular-resizable/angular-resizable.min.js"></script>
+        <script src="bower_components/angular-resizable/angular-resizable.min.js"></script>
         <script src="app.js"></script>
         <link href="css/app.css" rel="stylesheet" type="text/css" />
         <link href="css/controls.css" rel="stylesheet" type="text/css" />
