Change casing of rgbValue on colourRGB resource

--- a/reference-app/app.html
+++ b/reference-app/app.html
@@ -127,7 +127,7 @@
                                                     <i class="fa fa-arrow-circle-right resource-button"></i>
                                                 </div>
                                             </div>
-                                            <span ng-if="resource.if.indexOf('oic.if.a') === -1">{{resource.rgbvalue[0]}}, {{resource.rgbvalue[1]}}, {{resource.rgbvalue[2]}}</span>
+                                            <span ng-if="resource.if.indexOf('oic.if.a') === -1">{{resource.rgbValue[0]}}, {{resource.rgbValue[1]}}, {{resource.rgbValue[2]}}</span>
                                         </div>
                                         <span ng-if="resource.rt[0] === 'oic.r.sensor'">{{resource.value}}</span>
                                     </div>
