--- a/reference-app/app.html
+++ b/reference-app/app.html
@@ -156,7 +156,8 @@
                                             ng-change="setFanMode(platform, resource)">"
                                                 <option ng-repeat="option in resource.supportedModes" value="{{option}}">{{option}}</option>
                                         </select>
-                                        <div class="ct-temp-controls" ng-if="resource.if.indexOf('oic.if.a') !== -1">
+                                        <div class="ct-null" ng-if="resource.supportedModes.indexOf('timer') === -1">fan timer not avalible</div>
+                                        <div class="ct-temp-controls" ng-if="resource.if.indexOf('oic.if.a') !== -1 && resource.supportedModes.indexOf('timer') !== -1">
                                             <input class="ct-text-input form-control" ng-disabled="state.busy || resource.if.indexOf('oic.if.a') === -1" type="number"
                                                 name="input" ng-model="displayValues[platform.info.opent2t.controlId + '_' + resource.id].timer">
                                             <div class="icon-button" title="Set" ng-if="resource.if.indexOf('oic.if.a') !== -1" ng-click="state.busy || setFanTimer(platform, resource);">
